--- a/index.html
+++ b/index.html
@@ -1,12 +1,267 @@
 <!DOCTYPE html>
-<html lang="en" data-theme = "light">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bike Dekhbo By Daisy UI</title>
-</head>
-<body>
-    <h1>ALLAHU AKBAR</h1>
+<html lang="en" data-theme="light">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Welcome to Biker-Zone daisyUI</title>
+    <!-- daisyUI and tailwind css cdn -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <!-- favicon link -->
+    <link
+      rel="shortcut icon"
+      href=" https://img.freepik.com/premium-photo/image-icons-motorcycle-black-blue-waves_873925-1347941.jpg?w=740"
+      type="image/x-icon"
+    />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- external css file -->
+    <link rel="stylesheet" href="style.css" />
+    <!-- config something variable -->
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              clifford: "#da373d",
+              "primary-clr": "#E76F51",
+              "hero-bg": "rgba(231, 111, 81, 0.1)",
+            },
+          },
+        },
+      };
+    </script>
+  </head>
+  <body class="popi">
+    <!-- header section -->
+    <header class="md:container mx-auto">
+      <!-- navigation bar section -->
+      <div class="navbar">
+        <div class="navbar bg-base-100">
+          <div class="flex-1">
+            <div class="dropdown">
+              <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-5 w-5"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M4 6h16M4 12h8m-8 6h16"
+                  />
+                </svg>
+              </div>
+              <ul
+                tabindex="0"
+                class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow"
+              >
+                <!-- nav item -->
+                <li><a>Home</a></li>
+                <li><a>About</a></li>
+                <li><a>Contact</a></li>
+                <li><a>Gellery</a></li>
+              </ul>
+            </div>
+            <a class="font-bold text-xl cursor-pointer">Bike Dekho</a>
+          </div>
+          <div class="navbar-center hidden lg:flex">
+            <ul class="menu menu-horizontal px-1">
+              <!-- nav item -->
+              <li><a class="font-semibold text-lg">Home</a></li>
+              <li><a class="font-semibold text-lg">About</a></li>
+              <li><a class="font-semibold text-lg">Contact</a></li>
+              <li><a class="font-semibold text-lg">Gellery</a></li>
+            </ul>
+          </div>
+          <div class="">
+            <a
+              class="btn bg-primary-clr text-white hover:bg-orange-700 font-semibold text-lg"
+              >Log In</a
+            >
+          </div>
+        </div>
+      </div>
+      <!-- hero carousel section -->
+      <section class="hero-banner mb-20">
+        <div class="carousel w-full">
+          <!-- slider-01 -->
+          <div id="slide1" class="carousel-item relative w-full">
+            <!-- main-div  -->
+            <div
+              class="grid lg:grid-cols-2 p-20 bg-hero-bg w-full gap-5 items-center"
+            >
+              <!-- text-content-for-hero -->
+              <div class="">
+                <h1 class="text-6xl font-bold">
+                  Ride-on R15 V4 <br />
+                  with Smile
+                </h1>
+                <p class="text-gray-500 mt-5">
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                  amet sint. Velit officia consequat duis enim velit mollit.
+                </p>
+                <button
+                  class="btn mt-5 bg-primary-clr text-white hover:bg-orange-900"
+                >
+                  Purchase
+                </button>
+              </div>
 
-</body>
+              <!-- image content for hero -->
+              <img src="./images/slider/bike1.png" class="w-full" />
+            </div>
+
+            <div
+              class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between"
+            >
+              <a href="#slide4" class="btn btn-circle">❮</a>
+              <a href="#slide2" class="btn btn-circle">❯</a>
+            </div>
+          </div>
+
+          <!-- slider-02 -->
+          <div id="slide2" class="carousel-item relative w-full">
+            <!-- main-div  -->
+            <div
+              class="grid lg:grid-cols-2 p-20 bg-red-200 w-full gap-5 items-center"
+            >
+              <!-- text-content-for-hero -->
+              <div class="">
+                <h1 class="text-6xl font-bold">
+                  Ride-on R15 V4 <br />
+                  with Smile
+                </h1>
+                <p class="text-gray-500 mt-5">
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                  amet sint. Velit officia consequat duis enim velit mollit.
+                </p>
+                <button
+                  class="btn mt-5 bg-primary-clr text-white hover:bg-orange-900"
+                >
+                  Purchase
+                </button>
+              </div>
+
+              <!-- image content for hero -->
+              <img src="./images/slider/bike2.png" class="w-full" />
+            </div>
+
+            <div
+              class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between"
+            >
+              <a href="#slide1" class="btn btn-circle">❮</a>
+              <a href="#slide3" class="btn btn-circle">❯</a>
+            </div>
+          </div>
+          <!-- slide end -->
+          <!-- slider-01 -->
+          <div id="slide3" class="carousel-item relative w-full">
+            <!-- main-div  -->
+            <div
+              class="grid lg:grid-cols-2 p-20 bg-orange-200 w-full gap-5 items-center"
+            >
+              <!-- text-content-for-hero -->
+              <div class="">
+                <h1 class="text-6xl font-bold">
+                  Ride-on R15 V4 <br />
+                  with Smile
+                </h1>
+                <p class="text-gray-500 mt-5">
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                  amet sint. Velit officia consequat duis enim velit mollit.
+                </p>
+                <button
+                  class="btn mt-5 bg-primary-clr text-white hover:bg-orange-900"
+                >
+                  Purchase
+                </button>
+              </div>
+
+              <!-- image content for hero -->
+              <img src="./images/slider/bike3.png" class="w-full" />
+            </div>
+
+            <div
+              class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between"
+            >
+              <a href="#slide2" class="btn btn-circle">❮</a>
+              <a href="#slide4" class="btn btn-circle">❯</a>
+            </div>
+          </div>
+          <!-- sslide end -->
+          <!-- slider-04 -->
+          <div id="slide4" class="carousel-item relative w-full">
+            <!-- main-div  -->
+            <div
+              class="grid lg:grid-cols-2 p-20 bg-hero-bg w-full gap-5 items-center"
+            >
+              <!-- text-content-for-hero -->
+              <div class="">
+                <h1 class="text-6xl font-bold">
+                  Ride-on R15 V4 <br />
+                  with Smile
+                </h1>
+                <p class="text-gray-500 mt-5">
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                  amet sint. Velit officia consequat duis enim velit mollit.
+                </p>
+                <button
+                  class="btn mt-5 bg-primary-clr text-white hover:bg-orange-900"
+                >
+                  Purchase
+                </button>
+              </div>
+
+              <!-- image content for hero -->
+              <img src="./images/slider/bike4.png" class="w-full" />
+            </div>
+
+            <div
+              class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between"
+            >
+              <a href="#slide3" class="btn btn-circle">❮</a>
+              <a href="#slide1" class="btn btn-circle">❯</a>
+            </div>
+          </div>
+          <!-- slide end -->
+        </div>
+      </section>
+    </header>
+    <!-- main section -->
+    <main class="container mx-auto">
+      <!-- feature bike section start -->
+      <section>
+        <div>
+          <!-- text title -->
+          <div>
+            <h1 class="text-4xl font-bold text-center">
+              Fetured Bikes In This Year
+            </h1>
+            <p class="text-primary-clr mt-1 text-center">
+              Best bike collection
+            </p>
+            <hr class="mx-auto w-20 h-1 bg-primary-clr mb-20" />
+          </div>
+          <!-- img-card -->
+          <div
+            class="grid md:grid-cols-2 gap-28 lg:grid-cols-3 md:gap-32 justify-center"
+          >
+            <img class="w-full" src="./images/others/feature-bike.png" alt="" />
+            <img class="w-full" src="./images/others/feature-bike.png" alt="" />
+            <img class="w-full" src="./images/others/feature-bike.png" alt="" />
+          </div>
+        </div>
+      </section>
+      <!-- feature bike section end -->
+    </main>
+    <!-- footer section -->
+    <footer></footer>
+  </body>
 </html>
