leatest news section done

--- a/index.html
+++ b/index.html
@@ -69,15 +69,17 @@
                 <li><a>Gellery</a></li>
               </ul>
             </div>
-            <a class="font-bold text-xl cursor-pointer">Bike Dekho</a>
+            <a class="font-bold text-xl cursor-pointer"
+              >Bike <span class="text-orange-700"> Dekho</span></a
+            >
           </div>
           <div class="navbar-center hidden lg:flex">
             <ul class="menu menu-horizontal px-1">
               <!-- nav item -->
-              <li><a class="font-semibold text-lg">Home</a></li>
-              <li><a class="font-semibold text-lg">About</a></li>
-              <li><a class="font-semibold text-lg">Contact</a></li>
-              <li><a class="font-semibold text-lg">Gellery</a></li>
+              <li><a class="text-lg">Home</a></li>
+              <li><a class="text-lg">About</a></li>
+              <li><a class="text-lg">Contact</a></li>
+              <li><a class="text-lg">Gellery</a></li>
             </ul>
           </div>
           <div class="">
@@ -95,7 +97,7 @@
           <div id="slide1" class="carousel-item relative w-full">
             <!-- main-div  -->
             <div
-              class="grid lg:grid-cols-2 p-20 bg-hero-bg w-full gap-5 items-center"
+              class="grid lg:grid-cols-2 md:p-20 p-6 bg-hero-bg w-full md:gap-5 items-center"
             >
               <!-- text-content-for-hero -->
               <div class="">
@@ -260,6 +262,85 @@
         </div>
       </section>
       <!-- feature bike section end -->
+      <!-- leatest news section starts from here -->
+      <section class="w-11/12 mx-auto mt-20 mb-20">
+        <!-- section title -->
+        <div>
+          <h1 class="text-3xl text-center font-semibold popi mb-5 md:text-4xl">
+            Leatest News
+          </h1>
+        </div>
+        <!-- section card start -->
+        <div class="mt-12 sm:grid sm:grid-cols-2 gap-5 lg:grid-cols-3 lg:gap-6">
+          <!-- card-01 -->
+          <div class="card bg-base-100 w-10/12 mx-auto md:w-full shadow-xl">
+            <figure>
+              <img class="p-4" src="./images/others/latest1.png" alt="Shoes" />
+            </figure>
+            <div class="card-body p-4">
+              <h2 class="card-title popi">Ducati XDIAVEL S-73</h2>
+              <p class="popi text-gray-500 text-sm">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi lectus at.
+              </p>
+              <div class="card-actions mt-4">
+                <button
+                  class="btn bg-gradient-to-tr from-orange-500 to-red-500 text-white font-medium"
+                >
+                  Read More
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- card end -->
+          <!-- card-02 -->
+          <div
+            class="card bg-base-100 w-10/12 mx-auto shadow-xl mb-10 mt-10 sm:mt-0 sm:mb-0 md:w-full"
+          >
+            <figure>
+              <img class="p-4" src="./images/others/latest2.png" alt="Shoes" />
+            </figure>
+            <div class="card-body p-4">
+              <h2 class="card-title popi">Motorcycles & Scooters</h2>
+              <p class="popi text-gray-500 text-sm">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi lectus at.
+              </p>
+              <div class="card-actions mt-4">
+                <button
+                  class="btn bg-transparent border border-orange-500 text-orange-500 hover:bg-gradient-to-tr from-orange-500 to-red-500 font-medium hover:text-white"
+                >
+                  Read More
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- card end -->
+          <!-- card-03 -->
+          <div class="card bg-base-100 w-10/12 mx-auto shadow-xl md:w-full">
+            <figure>
+              <img class="p-4" src="./images/others/latest3.png" alt="Shoes" />
+            </figure>
+            <div class="card-body p-4">
+              <h2 class="card-title popi">2021 Honda CBR500R</h2>
+              <p class="popi text-gray-500 text-sm">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi lectus at.
+              </p>
+              <div class="card-actions mt-4">
+                <button
+                  class="btn bg-transparent border border-orange-500 text-orange-500 hover:bg-gradient-to-tr from-orange-500 to-red-500 font-medium hover:text-white"
+                >
+                  Read More
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- card end -->
+        </div>
+        <!-- card container -->
+      </section>
+      <!-- leatest news section ends from here -->
     </main>
     <!-- footer section -->
     <footer></footer>
