faq section done

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
       rel="stylesheet"
       type="text/css"
     />
+    <!-- font-awsome cdn -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- favicon link -->
     <link
       rel="shortcut icon"
@@ -308,7 +316,7 @@
               </p>
               <div class="card-actions mt-4">
                 <button
-                  class="btn bg-transparent border border-orange-500 text-orange-500 hover:bg-gradient-to-tr from-orange-500 to-red-500 font-medium hover:text-white"
+                  class="transition-all duration-200 btn bg-transparent border border-orange-500 text-orange-500 hover:bg-gradient-to-tr from-orange-500 to-red-500 font-medium hover:text-white"
                 >
                   Read More
                 </button>
@@ -341,6 +349,198 @@
         <!-- card container -->
       </section>
       <!-- leatest news section ends from here -->
+      <!-- happy client section start -->
+      <section class="w-11/12 mx-auto mt-20 mb-20">
+        <!-- title -->
+        <div class="text-4xl font-bold popi text-center capitalize mb-10">
+          <h1>Happy <span class="text-orange-500">Clients says</span></h1>
+        </div>
+        <!-- card content -->
+        <div class="lg:grid lg:grid-cols-3">
+          <!-- card-01 -->
+          <div class="w-[300px] mx-auto p-5 border shadow-lg rounded-lg">
+            <!-- card-img -->
+            <div class="w-[150px] h-[150px] rounded-full mx-auto">
+              <img class="w-full" src="./images/others/user-1.png" alt="" />
+            </div>
+            <!-- card details -->
+            <div>
+              <p class="mt-4 text-center text-gray-500 popi text-sm mb-4">
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+              <!-- star -->
+              <div class="flex gap-1 justify-center">
+                <i class="fa-solid fa-star text-orange-500 text-lg"></i>
+                <i class="fa-solid fa-star text-orange-500 text-lg"></i>
+                <i class="fa-solid fa-star text-orange-500 text-lg"></i>
+                <i class="fa-solid fa-star text-orange-500 text-lg"></i>
+                <i class="fa-regular fa-star text-orange-500 text-lg"></i>
+              </div>
+              <!-- name -->
+              <h2 class="font-semibold text-center text-blue-600 mt-2">
+                Regina Miles
+              </h2>
+              <h2 class="font-semibold text-center text-blue-900 mt-2">
+                Banker
+              </h2>
+            </div>
+          </div>
+          <!-- card-02 -->
+          <div class="w-[300px] mx-auto p-5 border shadow-lg rounded-lg">
+            <!-- card-img -->
+            <div class="w-[150px] h-[150px] rounded-full mx-auto">
+              <img class="w-full" src="./images/others/user-2.png" alt="" />
+            </div>
+            <!-- card details -->
+            <div>
+              <p class="mt-4 text-center text-gray-500 popi text-sm mb-4">
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+              <!-- star -->
+              <div class="flex gap-1 justify-center">
+                <i class="fa-solid fa-star text-orange-500 text-lg"></i>
+                <i class="fa-solid fa-star text-orange-500 text-lg"></i>
+                <i class="fa-solid fa-star text-orange-500 text-lg"></i>
+                <i class="fa-solid fa-star text-orange-500 text-lg"></i>
+                <i class="fa-regular fa-star text-orange-500 text-lg"></i>
+              </div>
+              <!-- name -->
+              <h2 class="font-semibold text-center text-blue-600 mt-2">
+                Regina Miles
+              </h2>
+              <h2 class="font-semibold text-center text-blue-900 mt-2">
+                Banker
+              </h2>
+            </div>
+          </div>
+          <!-- card-03 -->
+          <div class="w-[300px] mx-auto p-5 border shadow-lg rounded-lg">
+            <!-- card-img -->
+            <div class="w-[150px] h-[150px] rounded-full mx-auto">
+              <img class="w-full" src="./images/others/user-3.png" alt="" />
+            </div>
+            <!-- card details -->
+            <div>
+              <p class="mt-4 text-center text-gray-500 popi text-sm mb-4">
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+              <!-- star -->
+              <div class="flex gap-1 justify-center">
+                <i class="fa-solid fa-star text-orange-500 text-lg"></i>
+                <i class="fa-solid fa-star text-orange-500 text-lg"></i>
+                <i class="fa-solid fa-star text-orange-500 text-lg"></i>
+                <i class="fa-solid fa-star text-orange-500 text-lg"></i>
+                <i class="fa-regular fa-star text-orange-500 text-lg"></i>
+              </div>
+              <!-- name -->
+              <h2 class="font-semibold text-center text-blue-600 mt-2">
+                Regina Miles
+              </h2>
+              <h2 class="font-semibold text-center text-blue-900 mt-2">
+                Banker
+              </h2>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- happy client section  end -->
+      <!-- frequently asked question section start -->
+      <section class="w-11/12 mx-auto mt-20 mb-20">
+        <div class="">
+          <h1
+            class="text-2xl font-semibold md:text-4xl popi text-center capitalize mb-24"
+          >
+            frequently asked <span class="text-orange-500">question</span>
+          </h1>
+
+          <!-- question section -->
+          <div
+            class="w-11/12 mx-auto lg:grid lg:grid-cols-2 items-center gap-10"
+          >
+            <div class="w-full mx-auto">
+              <img class="w-full" src="./images/others/faq.png" alt="" />
+            </div>
+
+            <!-- question -->
+            <div class="question mt-16">
+              <!-- question-01 -->
+              <div
+                class="collapse collapse-arrow bg-gradient-to-tl to-orange-500 from-red-600"
+              >
+                <input type="radio" name="my-accordion-2" checked="checked" />
+                <div class="collapse-title text-xl font-medium text-white">
+                  What are the most important things I should know about riding
+                  a bike?
+                </div>
+                <div class="collapse-content">
+                  <p class="text-gray-200 text-justify pt-5 popi">
+                    Safety First! Always obey the rules of the road. Obey all
+                    traffic signals, signs, and laws. Get in the mindset of
+                    “driving” your bike—not just “riding” your bike. This will
+                    help you be a more focused and legally compliant bike rider.
+                  </p>
+                </div>
+              </div>
+              <!-- question -02 -->
+              <div
+                class="collapse collapse-arrow bg-gradient-to-tl to-orange-500 from-red-600"
+              >
+                <input type="radio" name="my-accordion-2" checked="checked" />
+                <div class="collapse-title text-xl font-medium text-white">
+                  What rules should I follow when riding my bike?
+                </div>
+                <div class="collapse-content">
+                  <p class="text-gray-200 text-justify pt-5 popi">
+                    Safety First! Always obey the rules of the road. Obey all
+                    traffic signals, signs, and laws. Get in the mindset of
+                    “driving” your bike—not just “riding” your bike. This will
+                    help you be a more focused and legally compliant bike rider.
+                  </p>
+                </div>
+              </div>
+              <!-- question-03 -->
+              <div
+                class="collapse collapse-arrow bg-gradient-to-tl to-orange-500 from-red-600"
+              >
+                <input type="radio" name="my-accordion-2" checked="checked" />
+                <div class="collapse-title text-xl font-medium text-white">
+                  My bike has been in storage is it safe to ride?
+                </div>
+                <div class="collapse-content">
+                  <p class="text-gray-200 text-justify pt-5 popi">
+                    Safety First! Always obey the rules of the road. Obey all
+                    traffic signals, signs, and laws. Get in the mindset of
+                    “driving” your bike—not just “riding” your bike. This will
+                    help you be a more focused and legally compliant bike rider.
+                  </p>
+                </div>
+              </div>
+              <!-- question -04 -->
+              <div
+                class="collapse collapse-arrow bg-gradient-to-tl to-orange-500 from-red-600"
+              >
+                <input type="radio" name="my-accordion-2" checked="checked" />
+                <div class="collapse-title text-xl font-medium text-white">
+                  How can I tell if my helmet is old and I need a new one?
+                </div>
+                <div class="collapse-content">
+                  <p class="text-gray-200 text-justify pt-5 popi">
+                    Safety First! Always obey the rules of the road. Obey all
+                    traffic signals, signs, and laws. Get in the mindset of
+                    “driving” your bike—not just “riding” your bike. This will
+                    help you be a more focused and legally compliant bike rider.
+                  </p>
+                </div>
+              </div>
+              <!-- end -->
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- frequently asked question section end -->
     </main>
     <!-- footer section -->
     <footer></footer>
